--- a/task3/index.html
+++ b/task3/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="trafficLight"></div>
+    <div id="trafficLight">
+        <div id="green"></div>
+        <div id="yellow"></div>
+        <div id="red"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
