--- a/task5/index.html
+++ b/task5/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS-Start. 5 задача</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form action="#">
